# ptutil

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  VERSION.md
cmake/: gcc-x64.toolchain
pt/: CMakeLists.txt  crc32.c  crc32.h  gpt.c  gpt.h  helpers.c  helpers.h
src/: CMakeLists.txt  gptmain.c  gptmain.h  ptutil.c
tests/: CMakeLists.txt  basicTest.hpp  gptTest.hpp  gtest.cpp  validate.c
